# gl-hnsw

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.deepagents/: AGENTS.md
.deepagents/skills/anchor-planning/: SKILL.md
.deepagents/skills/candidate-expansion/: SKILL.md
.deepagents/skills/corpus-adaptation/: SKILL.md
.deepagents/skills/counterevidence-check/: SKILL.md
.deepagents/skills/delegation-policy/: SKILL.md
.deepagents/skills/doc-briefing/: SKILL.md
.deepagents/skills/edge-utility-review/: SKILL.md
.deepagents/skills/entity-canonicalization/: SKILL.md
configs/: agents.yaml  app.yaml  hnsw.yaml  retrieval.yaml
data/demo/: gold_edges.jsonl  qrels.json  queries.json
data/raw/: demo.jsonl
dev-guides/: API.md  guide-1-1.md  guide-1-2.md
docs/: agent-runtime.md  architecture.md  benchmark-report.md
docs/architecture/: deepagents-whitepaper.md  system.md
docs/operations/: release-v0.1.md
docs/runtime/: agent-runtime.md
scripts/: build_embeddings.py  build_hnsw.py  discover_edges.py  evaluate.py  evaluate_beir_sample.py  profile_docs.py  revalidate_edges.py  serve_retrieval.py
src/hnsw_logic/: __init__.py  cli.py  scripts.py
tests/: conftest.py  test_api.py  test_beir_eval.py  test_config.py  test_deepagents_upgrade.py  test_doc_profiler.py  test_edge_quality.py  test_foundation_layers.py  test_graph_store.py  test_jobs_registry.py  test_jump_policy.py  test_memory_curator.py  test_pipeline.py  test_query_strategy.py  test_retrieval_service.py
tests/benchmarks/: test_beir.py
tests/integration/: test_api.py  test_deepagents_upgrade.py  test_pipeline.py
(+173 files in other folders)
